force-app/main/default/objects/Plan_Assets__c/Plan_Assets__c.object-meta.xml
<CustomObject>
    <description>Plan Assets</description>
    <label>Plan Assets</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Plan Assets Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>