force-app/main/default/objects/Plan_Assets__c/fields/Balance_Date__c.field-meta.xml
<CustomField>
    <fullName>Balance_Date__c</fullName>
    <description>Balance Date</description>
    <inlineHelpText>Balance Date</inlineHelpText>
    <label>Balance Date</label>
    <type>Date</type>
</CustomField>