force-app/main/default/objects/Plan_Assets__c/fields/Plan_Assets__c.field-meta.xml
<CustomField>
    <fullName>Plan_Assets__c</fullName>
    <description>Plan Assets</description>
    <inlineHelpText>Plan Assets</inlineHelpText>
    <label>Plan Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>