force-app/main/default/objects/Plan_Assets__c/fields/Plan_Billable_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Plan_Billable_Headcount__c</fullName>
    <description>Count of all plan&apos;s employees with over $100. Updated during BI Monthly Upload from Global Participants w/ Balance report.</description>
    <inlineHelpText>Count of all plan&apos;s employees with over $100</inlineHelpText>
    <label>Plan Billable Headcount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>